--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -179,7 +179,7 @@ Il nostro intento è verificare che i dati raccolti siano in accordo con la
 legge \eqref{eq: model}. Tramite la legge di Ohm è possibile ricavare la
 corrente nel diodo, dividendo la caduta di tensione misurate dalla boccola
 \verb'ADC0' per la resistenza $R$. Si è quindi effettuato un filtraggio volto
-all'eliminazione degli offset e dei punti meno significativi, assumendoli quali
+all'eliminazione degli outliers e dei punti meno significativi, assumendoli quali
 variabili indipendenti e di natura gaussiana. Per una discussione dettagliata
 del sistema di filtraggio dati si rimanda alla sezione A delle Appendici.
 
